fix addcart buttonspacing, category template

--- a/stylesrc/theme-software-light/category.less
+++ b/stylesrc/theme-software-light/category.less
@@ -322,7 +322,7 @@
         .btn-dark-primary;
         // line-height: 30px;
         // padding: 0 8px;
-        margin-top: 10px;
+        // margin-top: 10px;
 
         @media only screen and (max-width: @screen-lg) {
             display: block;
